--- a/index.html
+++ b/index.html
@@ -1,62 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rajshahi mohila polytechnic</title>
+    <title>job 4</title>
 </head>
 <body>
-    <h1>we are student of <br>
-    Computer science technology</h1> 
-    <hr>
-    <h2>আমার সোনার বাংলা, আমি তোমায় ভালোবাসি</h2> 
-    <h3>we are student of computer science technology</h3> 
-    <h4>we are student of computer science technology</h4>
-    <h5>we are student of computer science technology</h5>
-    <h6>we are student of computer science technology</h6> 
-  <p align="justify">
-    Lorem <u><b>iqsum</b></u> dolor sit amet<i> consectetur </i>adipisicing elit.
-     Cupiditate illum alias obcaecati ab laborum voluptatum molestias deserunt minima soluta accusantium voluptates nulla est officiis a iste, non assumenda optio? Debitis error provident dolores maiores dolorum quis doloribus distinctio perferendis magnam corrupti eligendi ducimus eaque velit inventore esse at, iusto voluptate voluptatibus, enim aut recusandae, perspiciatis consequuntur tempora. Iste velit odit ducimus aliquid architecto ipsam similique ipsum voluptates fuga? Commodi asperiores voluptates impedit incidunt fugiat temporibus delectus perferendis blanditiis libero nisi sapiente natus, earum architecto nobis in omnis totam eius? Ducimus neque non tempora animi error excepturi deleniti qui quaerat sed! ipsum dolor sit amet consectetur adipisicing elit. Possimus libero dolor esse maiores delectus deserunt earum at id cupiditate nobis quas suscipit, doloribus quos, animi nam omnis excepturi ab facere!
-  </p>
-  <img src="20220519_171010.jpg" alt="" width="300"
-   srcset="20220519_171010.jpg"><br>
-   <a href=""></a>
-  <a href="https://rmpi.gov.bd/" target="_blank">Rajshahi mohila polytechnic</a>
-  <a href="20220519_171010.jpg" target="_blank">20220519_171010</a>
-  <marquee behavior="" direction="" style="background-color: blue; color: azure;">মায়ের পায়ের নিচে সন্তানের বেহেশ্ত </marquee>
-  <marquee behavior="" direction="right"><img src="20220519_171010.jpg" alt="" width="300px"></marquee>
 
-  <table border="1" width="500px" style="text-align: center; background-color: aliceblue;">
-    <tr>
-      <td>Name</td>
-      <td>Roll</td>
-      <td>Reg</td>
-      <td>session</td>
-      <td>department</td>
-    </tr>
-    <tr>
-      <td>Anamika</td>
-      <td>621925</td>
-      <td>1502179695</td>
-      <td>2021-2022</td>
-      <td>CST</td>
-    </tr>
-    <tr>
-      <td>Riya</td>
-      <td>621915</td>
-      <td>1502179634</td>
-      <td>2021-2022</td>
-      <td>CST</td>
-    </tr>
-    <tr>
-      <td>borna</td>
-      <td>611994</td>
-      <td>1502178976</td>
-      <td>2021-2022</td>
-      <td>CST</td>
-    </tr>
 
-  </table>
-  <br>
-</body>
-</html>
+<header>
+    Rajahahi Mohila polytechnic Institute
+</header>
+<nav>
+This is Menu bar
+</nav>
+<aside>
+    <section>
+        <article>
+            This is a Section
+        </article>
+    </section>
+    <aside>
+        Sidebar
+    </aside>
+    <footer>
+        This is footer
+    </footer>
+</aside>
+</body></html>
