--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Rajshahi mohila polytechnic</h1>   
- <h1>Rajshahi mohila polytechnic</h1>   
- <h1>Rajshahi mohila polytechnic</h1>   
- <h1>Rajshahi mohila polytechnic</h1>   
+<div class="box">
+    this is box 1
+</div>
+<div class="box">
+    this is box 2
+</div>
+<div id="box">
+    this is box 3
+</div>
+<div class="box">
+    this is box 4
+</div>
+    
 </body>
 </html>
